--- a/backEndCode/safe-ride-tracker/src/main/resources/application.properties
+++ b/backEndCode/safe-ride-tracker/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=safe-ride-tracker
+
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/safe_ride_db
 spring.datasource.username=root
@@ -12,3 +13,12 @@ security.jwt.secret-key=3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c
 security.jwt.expiration-time=3600000
 # Port Configuration
 server.port=8007
+
+# SMTP server configurations
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email-id-gmail
+spring.mail.password=ypur-password-gmail
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
